added all the functionality

--- a/client/styles/Create.module.scss
+++ b/client/styles/Create.module.scss
@@ -14,11 +14,11 @@
 }
 
 .document {
-	border: 1px $dark solid;
-	padding: 15px;
-	width: 75%;
+	// border: 1px rgba(0, 0, 0, 0.064) solid;
+	// padding: 15px;
+	width: 60%;
 }
 .editor {
-	border: 1px $secondary solid;
-	width: 25%;
+	// border: 1px $secondary solid;
+	width: 40%;
 }
