--- a/client/styles/Index.module.scss
+++ b/client/styles/Index.module.scss
@@ -29,9 +29,11 @@
 .articleContainer {
 	padding: 25px;
 	display: flex;
-	justify-content: space-between;
+	flex-wrap: wrap;
+	margin: 10px;
 
 	.article {
+		margin: 10px;
 		display: flex;
 		width: 300px;
 		height: 300px;
