converted to spa

--- a/client/styles/theme.scss
+++ b/client/styles/theme.scss
@@ -1,5 +1,7 @@
 // This is the theme for the entire app
-$primary: #ffd933;
-$secondary: #f62a66;
+$primary: #e84545;
+$secondary: #2b2e4a;
 $dark: #374955;
 $darker: #203541;
+$background: none;
+$text: black;
