--- a/client/styles/Index.module.scss
+++ b/client/styles/Index.module.scss
@@ -15,6 +15,9 @@
 		font-weight: 500;
 
 		padding-left: 10px;
+		&:hover {
+			cursor: pointer;
+		}
 	}
 	.story {
 		position: absolute;
@@ -35,13 +38,14 @@
 	.article {
 		margin: 10px;
 		display: flex;
-		width: 300px;
-		height: 300px;
-		border: 1px $secondary solid;
+		width: 150px;
+		height: 200px;
+		border: 3px black solid;
 		border-radius: 5px;
 		&:hover {
-			background-color: transparentize($color: $secondary, $amount: 0.95);
-			border: 2px $primary solid;
+			background-color: transparentize($color: black, $amount: 0.95);
+			box-shadow: 1px 1px 2px black, 0 0 25px white, 0 0 5px grey;
+			// border: 2px $primary solid;
 			cursor: pointer;
 		}
 	}
