--- a/client/styles/globals.scss
+++ b/client/styles/globals.scss
@@ -1,3 +1,4 @@
+@import "theme";
 html,
 body {
 	padding: 0;
@@ -5,6 +6,8 @@ body {
 	// font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 	// 	Ubuntu, Cantaregrayll, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-family: "Open Sans", sans-serif;
+	background-color: $background;
+	color: $text;
 }
 h1,
 h2,
@@ -20,21 +23,6 @@ h2 {
 }
 h3 {
 	font-size: 20px;
-}
-
-[contenteditable] {
-	outline: 0px solid transparent;
-	padding: 5px;
-}
-[contenteditable]:focus {
-	background-color: rgba(1, 1, 1, 0.091);
-	border-radius: 5px;
-}
-[contenteditable][placeholder]:empty:before {
-	content: attr(placeholder);
-	position: absolute;
-	color: rgba(1, 1, 1, 0.427);
-	background-color: transparent;
 }
 a {
 	color: inherit;
