--- a/client/styles/theme.scss
+++ b/client/styles/theme.scss
@@ -1,6 +1,9 @@
 // This is the theme for the entire app
-$primary: #e84545;
-$secondary: #2b2e4a;
+$darkblue: #155676;
+$lightred: #d04853;
+
+$primary: $lightred;
+$secondary: #d5d5d5;
 $dark: #374955;
 $darker: #203541;
 $background: none;
