--- a/client/styles/theme.scss
+++ b/client/styles/theme.scss
@@ -2,8 +2,8 @@
 $darkblue: #155676;
 $lightred: #d04853;
 
-$primary: $lightred;
-$secondary: #d5d5d5;
+$primary: black;
+$secondary: #d5d5d584;
 $dark: #374955;
 $darker: #203541;
 $background: none;
