added the discover chart and merged to the serach

--- a/client/styles/theme.scss
+++ b/client/styles/theme.scss
@@ -3,7 +3,7 @@ $darkblue: #155676;
 $lightred: #d04853;
 
 $primary: black;
-$secondary: #d5d5d584;
+$secondary: #969696;
 $dark: #374955;
 $darker: #203541;
 $background: none;
