some changes before presentation

--- a/client/styles/Index.module.scss
+++ b/client/styles/Index.module.scss
@@ -15,9 +15,9 @@
 		font-weight: 500;
 
 		padding-left: 10px;
-		&:hover {
-			cursor: pointer;
-		}
+		// &:hover {
+		// 	cursor: pointer;
+		// }
 	}
 	.story {
 		position: absolute;
